// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the BodyText component should accept additional props 1`] = `
<Text
  accessible={false}
  allowFontScaling={true}
  bold={false}
  ellipsizeMode="tail"
  italic={false}
  style={
    Object {
      "color": "#303030",
      "fontFamily": "DroidSerif",
      "fontSize": 20.02,
      "lineHeight": 33.11,
    }
  }
>
  "True faith means holding nothing back. It means putting every hope in God's fidelity to His Promises." ― Francis Chan
</Text>
`;

exports[`the BodyText component should accept and render passed in styles 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  bold={false}
  ellipsizeMode="tail"
  italic={false}
  style={
    Object {
      "color": "salmon",
      "fontFamily": "DroidSerif",
      "fontSize": 20.02,
      "lineHeight": 33.11,
    }
  }
>
  Salmon text
</Text>
`;

exports[`the BodyText component should render a loading state 1`] = `
<View
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#dddddd",
      "borderRadius": 6,
      "height": 20.02,
      "marginVertical": 6.545,
      "width": "100%",
    }
  }
/>
`;

exports[`the BodyText component should render as bold 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  bold={true}
  ellipsizeMode="tail"
  italic={false}
  style={
    Object {
      "color": "#303030",
      "fontFamily": "DroidSerif-Bold",
      "fontSize": 20.02,
      "lineHeight": 33.11,
    }
  }
>
  Bold BodyText text
</Text>
`;

exports[`the BodyText component should render as bold italic 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  bold={true}
  ellipsizeMode="tail"
  italic={true}
  style={
    Object {
      "color": "#303030",
      "fontFamily": "DroidSerif-BoldItalic",
      "fontSize": 20.02,
      "lineHeight": 33.11,
    }
  }
>
  Bold italic BodyText text
</Text>
`;

exports[`the BodyText component should render as italic 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  bold={false}
  ellipsizeMode="tail"
  italic={true}
  style={
    Object {
      "color": "#303030",
      "fontFamily": "DroidSerif-Italic",
      "fontSize": 20.02,
      "lineHeight": 33.11,
    }
  }
>
  Italic BodyText text
</Text>
`;

exports[`the BodyText component should render correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  bold={false}
  ellipsizeMode="tail"
  italic={false}
  style={
    Object {
      "color": "#303030",
      "fontFamily": "DroidSerif",
      "fontSize": 20.02,
      "lineHeight": 33.11,
    }
  }
>
  Default BodyText text
</Text>
`;
